# substrate-node-template

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs  tests.rs  tests_composite.rs  tests_local.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: lib.rs  mock.rs  tests.rs
pallets/collective/: Cargo.toml  README.md
pallets/collective/src/: impls.rs  lib.rs  tests.rs
pallets/collective/src/migrations/: mod.rs
pallets/did/: Cargo.toml
pallets/did/src/: impls.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/extrinsic-controls/: Cargo.toml
pallets/extrinsic-controls/src/: impls.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/ledgers/: Cargo.toml
pallets/ledgers/src/: benchmarking.rs  imbalances.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/metamui-primitives/: Cargo.toml
pallets/metamui-primitives/src/: lib.rs  traits.rs  types.rs
pallets/template/: Cargo.toml
pallets/token/: Cargo.toml
pallets/token/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/validator-collective/: Cargo.toml
pallets/validator-collective/src/: impls.rs  lib.rs  tests.rs  types.rs  weights.rs
pallets/validator-set/: Cargo.toml  README.md
pallets/validator-set/src/: lib.rs  tests.rs
pallets/validator-set/src/migrations/: mod.rs
pallets/vc/: Cargo.toml
pallets/vc/src/: impls.rs  lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
