[package]
name = "pallet-balances"
version = "1.0.0"
authors = ['Metamui']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/SovereignWallet-Network/metamui-crates'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log ={ default-features = false, version = '0.4.17' }
codec={ default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
scale-info={default-features = false, features = ['derive'], version = '2.1.1'}
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', optional = true, tag = 'polkadot-v1.1.0' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }

# DGEL Packages
metamui-primitives = { default-features = false, path = '../metamui-primitives', version = '1.0.0' }

[dev-dependencies]
sp-io = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/polkadot-sdk', tag = 'polkadot-v1.1.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
