[package]
authors = [ 'Sourav Mishra' ]
edition = '2021'
name = 'pallet-extrinsic-controls'
version = '1.0.0'
description = 'Pallet to validate transactions by reviewing access'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { default-features = false, features = ['derive'], version = '=2.9.0' }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0"}
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-std = { default-features = false, version = '3.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.136' }

# DGEL Packages
metamui-primitives = { version = "1.0.0", default-features = false, path = '../metamui-primitives'}

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
]
