[package]
name = "pallet-ledgers"
authors = ["MetaMUI"]
description = "Tokens pallet for creating multiple tokens"
version = "0.1.1"
license = "Unlicense"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

# polkadot-sdk
serde = { version = "1.0.137", optional = true, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.0.0" }
num = { version = "0.4.0", default-features = false }

# MetaMUI
metamui-primitives = { path = "../metamui-primitives", version = "1.0.0", default-features = false }

[dev-dependencies]
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

# MetaMUI
pallet-balances = { path = "../balances", version = "1.0.0", default-features = false }
pallet-did = { path = "../did", version = "1.0.0", default-features = false }
pallet-vc = { path = "../vc", version = "1.0.0", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-did/std',
  'pallet-vc/std'
]
try-runtime = [ "frame-support/try-runtime" ]
