[package]
name = "metamui-primitives"
version = "1.0.0"
authors = ["Fenn Saji"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SovereignWallet-Network/metamui-crates"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "=2.9.0", features = ["derive"], default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-std = { git = 'https://github.com/paritytech/polkadot-sdk', tag="polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
