[package]
name = "pallet-validator-collective"
version = "1.0.0"
authors = ["Metamui"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SovereignWallet-Network/metamui-crates.git"
description = "Collective system: Members of a set of Dids can make their collective feelings known through dispatched calls from one of two specialized origins."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
optional = true
tag = 'polkadot-v1.1.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk'
tag = 'polkadot-v1.1.0'

[dependencies.metamui-primitives]
default-features = false
path = '../metamui-primitives'
version = '1.0.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
